CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (CPPHTTPSERVER)

FIND_PACKAGE (PkgConfig REQUIRED)

PKG_CHECK_MODULES (MHD libmicrohttpd)

IF (NOT ${MHD_FOUND})
  MESSAGE(FATAL_ERROR "Could not find libmicrohttpd")
ENDIF()

FIND_PATH (MHD_INCLUDE_DIRS microhttpd.h)
FIND_LIBRARY (MHD_LIBRARIES NAMES libmicrohttpd)

INCLUDE_DIRECTORIES (${MHD_INCLUDE_DIRS}) 

ADD_SUBDIRECTORY (bin)
ADD_SUBDIRECTORY (server) 